--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "playwright-extra": "^4.3.6",
     "prompts": "^2.4.2",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "tweet-harvest": "^2.6.1",
     "yargs": "^17.7.2",
     "znv": "^0.3.2",
     "zod": "^3.22.4"
@@ -54,5 +55,11 @@
     "dev": "npx tsx src/dev.ts",
     "build": "tsup",
     "prepublish": "pnpm build"
-  }
+  },
+  "main": "index.js",
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/helmisatria/tweet-harvest/issues"
+  },
+  "homepage": "https://github.com/helmisatria/tweet-harvest#readme"
 }
